--- a/src/main/webapp/assets/css/adminStyle.css
+++ b/src/main/webapp/assets/css/adminStyle.css
@@ -13,3 +13,66 @@ body {
     display: grid;
     margin: 0 auto;
 }
+
+.search {
+    position: relative;
+    width: 450px;
+    height: 60px;
+    left: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto auto;
+    background: #f1f3f5;
+    border-radius: 60px;
+}
+
+.search .input {
+    position: relative;
+    width: 370px;
+    height: 60px;
+    left: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f1f3f5;
+    border-radius: 60px;
+}
+
+.search .input input {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    padding: 10px 0;
+    background: #f1f3f5;
+    border-radius: 60px;
+}
+
+.search .search-icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    background: #f1f3f5;
+    color: #626161;
+    align-items: center;
+    padding: 20px;
+    border-radius: 60px 60px;
+}
+
+.search .select-column-number #selectedColumn {
+    position: relative;
+    background: #f1f3f5;
+    right: 0;
+    top: 0;
+    width: 120px;
+    text-align: right;
+    margin-right: 7px;
+    border: none;
+    outline: none;
+}
